--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
+
 * {
     padding: 0;
     margin: 0;
-    text-decoration: none;
+    box-sizing: border-box;
     list-style: none;
 }
 
@@ -40,7 +41,7 @@ header nav ul {
     border-radius: 30px;
     border: none;
     height: 35px;
-    width: px;
+    width: 200px;
     padding-left: 40px;
 }
 
@@ -65,6 +66,7 @@ header button:active {
     transform: scale(0.96);
 }
 
+/* Main */
 main {
     width: 100%;
     margin: 0 auto;
@@ -72,11 +74,13 @@ main {
     flex-direction: column;
 }
 
-main .hr {
+main .divider {
     height: 2px;
+    background-color: #ccc;
+    margin: 20px 0;
 }
 
-.ContentUser {
+.content-user {
     width: 80%;
     padding-inline: 20px;
     margin: 0 auto;
@@ -85,7 +89,7 @@ main .hr {
     font-size: 16px;
 }
 
-.ContentUser .User {
+.content-user .user {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -95,22 +99,22 @@ main .hr {
     margin-bottom: 10px;
 }
 
-.ContentUser .User .NumberOrder {
+.content-user .user .number-order {
     width: 5%;
     text-align: center;
 }
 
-.ContentUser .User .NameUser {
+.content-user .user .name-user {
     width: 30%;
     padding-left: 10px;
 }
 
-.ContentUser .User .EmailUser {
+.content-user .user .email-user {
     width: 35%;
     padding-left: 10px;
 }
 
-.ContentUser .User button {
+.content-user .user button {
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
@@ -118,28 +122,84 @@ main .hr {
     cursor: pointer;
 }
 
-.ContentUser .User button:nth-of-type(1) {
+.content-user .user button:nth-of-type(1) {
     background-color: #32CD32;
     color: white;
 }
 
-.ContentUser .User button:nth-of-type(1):hover {
+.content-user .user button:nth-of-type(1):hover {
     background-color: #28a745;
 }
 
-.ContentUser .User button:nth-of-type(1):active {
+.content-user .user button:nth-of-type(1):active {
     transform: scale(0.96);
 }
 
-.ContentUser .User button:nth-of-type(2) {
+.content-user .user button:nth-of-type(2) {
     background-color: #B22222;
     color: white;
 }
 
-.ContentUser .User button:nth-of-type(2):hover {
+.content-user .user button:nth-of-type(2):hover {
     background-color: #a51c1c;
 }
 
-.ContentUser .User button:nth-of-type(2):active {
+.content-user .user button:nth-of-type(2):active {
     transform: scale(0.96);
+}
+
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.modal-content input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+/* Notificação */
+.notification {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #28a745;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    display: none;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .search-bar {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .content-user .user {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
